cmake_minimum_required (VERSION 2.8)
project(shared_ptr)
add_definitions(-std=c++11 -g -O1)
set(CMAKE_BUILD_TYPE "Debug")
set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
include_directories(../../googletest/googletest/include)
link_directories(../../googletest/lib)
aux_source_directory(. DIR_SRCS)
link_libraries(gtest pthread asan)
add_executable(shared_ptr shared_ptr_test.cc)